force-app/main/default/objects/FS_ProductoAdquirido__c/fields/FS_Producto__c.field-meta.xml
<CustomField>
    <fullName>FS_Producto__c</fullName>
    <label>Producto</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>FISA System</fullName>
            </value>
            <value>
                <fullName>FISA CreditCard</fullName>
            </value>
            <value>
                <fullName>OMNIA</fullName>
            </value>
            <value>
                <fullName>FISA FISS</fullName>
            </value>
            <value>
                <fullName>FORWARDS</fullName>
            </value>
            <value>
                <fullName>FUTUROS</fullName>
            </value>
            <value>
                <fullName>GARANTIAS</fullName>
            </value>
            <value>
                <fullName>GENERAL</fullName>
            </value>
            <value>
                <fullName>INTERBANCARIOS</fullName>
            </value>
            <value>
                <fullName>OBLIGACIONES</fullName>
            </value>
            <value>
                <fullName>OPCIONES</fullName>
            </value>
            <value>
                <fullName>PASIVOS A PLAZOS</fullName>
            </value>
            <value>
                <fullName>RENTA VARIABLE</fullName>
            </value>
            <value>
                <fullName>REPOS</fullName>
            </value>
            <value>
                <fullName>SPOT</fullName>
            </value>
            <value>
                <fullName>SWAPS</fullName>
            </value>
            <value>
                <fullName>TITULOS VALORES</fullName>
            </value>
            <value>
                <fullName>Tesoreria</fullName>
                <isActive>false</isActive>
                <label>Tesoreria</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>