force-app/main/default/objects/FS_ProductoAdquirido__c/fields/FS_ProductoTesoreria__c.field-meta.xml
<CustomField>
    <fullName>FS_ProductoTesoreria__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Campo de Checkbox que nos permite determinar si el producto corresponde o no al flujo de tesorería.</description>
    <label>Producto Tesorería</label>
    <type>Checkbox</type>
</CustomField>