force-app/main/default/objects/FS_ProductoAdquirido__c/fields/FS_SubModulo__c.field-meta.xml
<CustomField>
    <fullName>FS_SubModulo__c</fullName>
    <label>Sub Módulo</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>FS_Modulo__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>ACH</fullName>
            </value>
            <value>
                <fullName>Activación de versiones por política</fullName>
            </value>
            <value>
                <fullName>Administración multicanal</fullName>
            </value>
            <value>
                <fullName>Afiliación</fullName>
            </value>
            <value>
                <fullName>Afiliaciones</fullName>
            </value>
            <value>
                <fullName>Analizer Monitor</fullName>
            </value>
            <value>
                <fullName>Autenticación y seguridad</fullName>
                <isActive>false</isActive>
                <label>Autenticación y seguridad</label>
            </value>
            <value>
                <fullName>Autorizaciones</fullName>
            </value>
            <value>
                <fullName>Autorizados de pago</fullName>
            </value>
            <value>
                <fullName>Avales</fullName>
            </value>
            <value>
                <fullName>Beneficiarios</fullName>
            </value>
            <value>
                <fullName>Beneficiarios Enterprise Banking</fullName>
            </value>
            <value>
                <fullName>Boletas de garantía</fullName>
            </value>
            <value>
                <fullName>Business Application Tools</fullName>
            </value>
            <value>
                <fullName>Business Rule Engine - BRE</fullName>
            </value>
            <value>
                <fullName>Calendarización Y Procesos Masivos</fullName>
            </value>
            <value>
                <fullName>Campaign Management</fullName>
            </value>
            <value>
                <fullName>Carga de Documentos</fullName>
            </value>
            <value>
                <fullName>Cartas de crédito</fullName>
            </value>
            <value>
                <fullName>Catálogos y Mapeos B.O</fullName>
            </value>
            <value>
                <fullName>Clientes (Módulo 2)</fullName>
            </value>
            <value>
                <fullName>Cobranzas</fullName>
            </value>
            <value>
                <fullName>Cobros Enterprise Banking</fullName>
            </value>
            <value>
                <fullName>Componente generales</fullName>
            </value>
            <value>
                <fullName>Configuración de servidores</fullName>
            </value>
            <value>
                <fullName>Consultas de saldos</fullName>
            </value>
            <value>
                <fullName>Crédito Automotriz</fullName>
            </value>
            <value>
                <fullName>Crédito Hipotecario</fullName>
            </value>
            <value>
                <fullName>Crédito Hipotecario con Letras</fullName>
            </value>
            <value>
                <fullName>Créditos de Consumo/Comerciales/Personales</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>